mudança dos olhos

--- a/index.html
+++ b/index.html
@@ -212,10 +212,6 @@
                 </section>
             </div>
 
-            <!--<div id="cover-moves-made">
-                <div id="moves-made"></div>
-            </div>-->
-
         </main>
 
         <div id="cover"></div>
@@ -230,8 +226,8 @@
                     <div id="login-existente">
                         <input type="text" placeholder="User" minlength="5" maxlength="20" id="nome-logar" class="input-login">
                         <div class="login-olho">
-                            <input type="password" placeholder="Password" minlength="8" maxlength="25" id="senha-logar" class="input-login">
-                            <label for="senha-logar" class="olho"><img src="img/olho-aberto.png" class="olho-img"></label>
+                            <input type="password" placeholder="Password" minlength="8" maxlength="16" id="senha-logar" class="input-login">
+                            <label for="senha-logar" class="olho"><img src="img/olho-aberto.svg" class="olho-img"></label>
                         </div>
                     </div>
                     <button id="botao-login" class="botoes" type="submit">Login</button>
@@ -242,12 +238,12 @@
                         <input type="text" placeholder="User name" minlength="5" maxlength="20" id="novo-nome" class="input-login">
                         <input type="email" placeholder="Email" step="1" id="email" class="input-login">
                         <div class="login-olho">
-                            <input type="password" placeholder="New password" minlength="8" maxlength="25" id="nova-senha" class="input-login">
-                            <label for="nova-senha" class="olho"><img src="img/olho-aberto.png" class="olho-img"></label>
+                            <input type="password" placeholder="New password" minlength="16" maxlength="16" id="nova-senha" class="input-login">
+                            <label for="nova-senha" class="olho"><img src="img/olho-aberto.svg" class="olho-img"></label>
                         </div>
                         <div class="login-olho">
-                            <input type="password" placeholder="Confirm password" minlength="8" maxlength="25" class="input-login" id="senha-confirmacao">
-                            <label for="senha-confirmacao" class="olho"><img src="img/olho-aberto.png" class="olho-img"></label>
+                            <input type="password" placeholder="Confirm password" minlength="16" maxlength="16" class="input-login" id="senha-confirmacao">
+                            <label for="senha-confirmacao" class="olho"><img src="img/olho-aberto.svg" class="olho-img"></label>
                         </div>
                     </div>
                     <button id="botao-confirmar" class="botoes" type="submit">Create</button>
